BigBull Crawler Initiate

--- a/UncleBull/bsm_functions.ipynb
+++ b/UncleBull/bsm_functions.ipynb
@@ -71,15 +71,91 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
     "# Vega function\n",
-    "def "
+    "def bsm_vega(S0, K, T, r, sigma):\n",
+    "    '''Vega of European option in BSM model.\n",
+    "    \n",
+    "    Parameters\n",
+    "    ==========\n",
+    "    S0 : float\n",
+    "         initial stock/index level\n",
+    "    K  : float\n",
+    "         strike price\n",
+    "    T  : float\n",
+    "         maturity date (in year fractions)\n",
+    "    r  : float\n",
+    "         constant risk-free rate\n",
+    "    sigma : float\n",
+    "         volatility factor in diffusion term\n",
+    "         \n",
+    "    Returns\n",
+    "    =======\n",
+    "    vega : float\n",
+    "         partial derivative of BSM formula with respect to sigma, i.e. Vega\n",
+    "    '''\n",
+    "    \n",
+    "    from math import log, sqrt\n",
+    "    from scipy import stats\n",
+    "    \n",
+    "    S0 = float(S0)\n",
+    "    d1 = log(S0 / K) + (r + 0.5 * sigma ** 2) * T / (sigma * sqrt(T)) \n",
+    "    vega = S0 * stats.norm.cdf(d1, 0.0, 1.0) * sqrt(T)\n",
+    "    \n",
+    "    return vega\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# Implied volatitlity function \n",
+    "def bsm_call_imp_vol(S0, K, T, r, C0, sigma_est, it=100): \n",
+    "    ''' Implied volatility of European call option in BSM model. \n",
+    "    \n",
+    "    Parameters\n",
+    "    ==========\n",
+    "    S0 : float \n",
+    "         initila stock/index level\n",
+    "    K  : float\n",
+    "         strike price\n",
+    "    T  : float \n",
+    "         maturity date (in the fractions) \n",
+    "    r  : float \n",
+    "         constant risk-free short rate\n",
+    "    sigma_est : float\n",
+    "         estimate of impl. volatility\n",
+    "    it : integer\n",
+    "         number of iterations\n",
+    "         \n",
+    "    Returns \n",
+    "    =======\n",
+    "    sigma_est : float\n",
+    "         numerically estimated implied volatility\n",
+    "    '''\n",
+    "    \n",
+    "    for i in range(it):\n",
+    "        sigma_est -= ((bsm_call_value(S0, K, T, r, sigma_est) - C0) / bsm_vega(S0, K, T, r, sigma_est))\n",
+    "        "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
