--- a/BigBull/crawler4piotrostki_universe.ipynb
+++ b/BigBull/crawler4piotrostki_universe.ipynb
@@ -4089,7 +4089,9 @@
   {
    "cell_type": "code",
    "execution_count": 34,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Convert stock ids & names lists to Pandas DF \n",
@@ -5264,7 +5266,9 @@
   {
    "cell_type": "code",
    "execution_count": 44,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# convert KOSDAQ ids & names lists to Pandas DF \n",
@@ -6280,7 +6284,9 @@
   {
    "cell_type": "code",
    "execution_count": 48,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Append KOSPI & KOSDAQ\n",
@@ -6290,7 +6296,9 @@
   {
    "cell_type": "code",
    "execution_count": 51,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "df_piotroski_all = pd.concat(frames, ignore_index=True)"
@@ -7540,7 +7548,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -7557,7 +7565,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -7570,7 +7578,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
@@ -7582,7 +7590,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 4,
    "metadata": {
     "collapsed": true
    },
@@ -7593,7 +7601,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 5,
    "metadata": {
     "collapsed": true
    },
@@ -7626,7 +7634,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 6,
    "metadata": {
     "collapsed": true
    },
@@ -7654,7 +7662,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 7,
    "metadata": {
     "collapsed": true
    },
@@ -7679,81 +7687,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2017-09-21 10:52:02,622 INFO sqlalchemy.engine.base.Engine select version()\n",
-      "2017-09-21 10:52:02,624 INFO sqlalchemy.engine.base.Engine {}\n",
-      "2017-09-21 10:52:02,627 INFO sqlalchemy.engine.base.Engine select current_schema()\n",
-      "2017-09-21 10:52:02,628 INFO sqlalchemy.engine.base.Engine {}\n",
-      "2017-09-21 10:52:02,630 INFO sqlalchemy.engine.base.Engine SELECT CAST('test plain returns' AS VARCHAR(60)) AS anon_1\n",
-      "2017-09-21 10:52:02,630 INFO sqlalchemy.engine.base.Engine {}\n",
-      "2017-09-21 10:52:02,633 INFO sqlalchemy.engine.base.Engine SELECT CAST('test unicode returns' AS VARCHAR(60)) AS anon_1\n",
-      "2017-09-21 10:52:02,634 INFO sqlalchemy.engine.base.Engine {}\n",
-      "2017-09-21 10:52:02,635 INFO sqlalchemy.engine.base.Engine show standard_conforming_strings\n",
-      "2017-09-21 10:52:02,636 INFO sqlalchemy.engine.base.Engine {}\n",
-      "2017-09-21 10:52:02,638 INFO sqlalchemy.engine.base.Engine select relname from pg_class c join pg_namespace n on n.oid=c.relnamespace where pg_catalog.pg_table_is_visible(c.oid) and relname=%(name)s\n",
-      "2017-09-21 10:52:02,639 INFO sqlalchemy.engine.base.Engine {'name': 'stocks'}\n",
-      "2017-09-21 10:52:02,642 INFO sqlalchemy.engine.base.Engine select relname from pg_class c join pg_namespace n on n.oid=c.relnamespace where pg_catalog.pg_table_is_visible(c.oid) and relname=%(name)s\n",
-      "2017-09-21 10:52:02,643 INFO sqlalchemy.engine.base.Engine {'name': 'base_params'}\n",
-      "2017-09-21 10:52:02,645 INFO sqlalchemy.engine.base.Engine select relname from pg_class c join pg_namespace n on n.oid=c.relnamespace where pg_catalog.pg_table_is_visible(c.oid) and relname=%(name)s\n",
-      "2017-09-21 10:52:02,646 INFO sqlalchemy.engine.base.Engine {'name': 'bookmarket_params'}\n",
-      "2017-09-21 10:52:02,649 INFO sqlalchemy.engine.base.Engine \n",
-      "CREATE TABLE stocks (\n",
-      "\tstock_id SERIAL NOT NULL, \n",
-      "\tstock_code VARCHAR NOT NULL, \n",
-      "\tcompany VARCHAR NOT NULL, \n",
-      "\tmarket_type INTEGER, \n",
-      "\tindustry VARCHAR, \n",
-      "\tcreated_on TIMESTAMP WITHOUT TIME ZONE, \n",
-      "\tupdated_on TIMESTAMP WITHOUT TIME ZONE, \n",
-      "\tPRIMARY KEY (stock_id), \n",
-      "\tUNIQUE (stock_code)\n",
-      ")\n",
-      "\n",
-      "\n",
-      "2017-09-21 10:52:02,650 INFO sqlalchemy.engine.base.Engine {}\n",
-      "2017-09-21 10:52:02,673 INFO sqlalchemy.engine.base.Engine COMMIT\n",
-      "2017-09-21 10:52:02,675 INFO sqlalchemy.engine.base.Engine CREATE UNIQUE INDEX ix_stocks_company ON stocks (company)\n",
-      "2017-09-21 10:52:02,676 INFO sqlalchemy.engine.base.Engine {}\n",
-      "2017-09-21 10:52:02,679 INFO sqlalchemy.engine.base.Engine COMMIT\n",
-      "2017-09-21 10:52:02,681 INFO sqlalchemy.engine.base.Engine \n",
-      "CREATE TABLE base_params (\n",
-      "\tbaseparam_id SERIAL NOT NULL, \n",
-      "\tstock_code VARCHAR, \n",
-      "\tdate TIMESTAMP WITHOUT TIME ZONE, \n",
-      "\tprice_open INTEGER, \n",
-      "\tprice_close INTEGER, \n",
-      "\tprice_high INTEGER, \n",
-      "\tprice_low INTEGER, \n",
-      "\tquant INTEGER, \n",
-      "\tmarket_sum INTEGER, \n",
-      "\tPRIMARY KEY (baseparam_id), \n",
-      "\tFOREIGN KEY(stock_code) REFERENCES stocks (stock_code)\n",
-      ")\n",
-      "\n",
-      "\n",
-      "2017-09-21 10:52:02,682 INFO sqlalchemy.engine.base.Engine {}\n",
-      "2017-09-21 10:52:02,694 INFO sqlalchemy.engine.base.Engine COMMIT\n",
-      "2017-09-21 10:52:02,696 INFO sqlalchemy.engine.base.Engine \n",
-      "CREATE TABLE bookmarket_params (\n",
-      "\tbookmarketparam_id SERIAL NOT NULL, \n",
-      "\tstock_code VARCHAR, \n",
-      "\tlisted_stock_cnt INTEGER, \n",
-      "\tproperty_total INTEGER, \n",
-      "\tdebt_total INTEGER, \n",
-      "\tpbr INTEGER, \n",
-      "\tPRIMARY KEY (bookmarketparam_id), \n",
-      "\tFOREIGN KEY(stock_code) REFERENCES stocks (stock_code)\n",
-      ")\n",
-      "\n",
-      "\n",
-      "2017-09-21 10:52:02,697 INFO sqlalchemy.engine.base.Engine {}\n",
-      "2017-09-21 10:52:02,705 INFO sqlalchemy.engine.base.Engine COMMIT\n"
+      "2017-09-22 23:50:20,277 INFO sqlalchemy.engine.base.Engine select version()\n",
+      "2017-09-22 23:50:20,278 INFO sqlalchemy.engine.base.Engine {}\n",
+      "2017-09-22 23:50:20,283 INFO sqlalchemy.engine.base.Engine select current_schema()\n",
+      "2017-09-22 23:50:20,285 INFO sqlalchemy.engine.base.Engine {}\n",
+      "2017-09-22 23:50:20,288 INFO sqlalchemy.engine.base.Engine SELECT CAST('test plain returns' AS VARCHAR(60)) AS anon_1\n",
+      "2017-09-22 23:50:20,289 INFO sqlalchemy.engine.base.Engine {}\n",
+      "2017-09-22 23:50:20,293 INFO sqlalchemy.engine.base.Engine SELECT CAST('test unicode returns' AS VARCHAR(60)) AS anon_1\n",
+      "2017-09-22 23:50:20,295 INFO sqlalchemy.engine.base.Engine {}\n",
+      "2017-09-22 23:50:20,298 INFO sqlalchemy.engine.base.Engine show standard_conforming_strings\n",
+      "2017-09-22 23:50:20,300 INFO sqlalchemy.engine.base.Engine {}\n",
+      "2017-09-22 23:50:20,306 INFO sqlalchemy.engine.base.Engine select relname from pg_class c join pg_namespace n on n.oid=c.relnamespace where pg_catalog.pg_table_is_visible(c.oid) and relname=%(name)s\n",
+      "2017-09-22 23:50:20,308 INFO sqlalchemy.engine.base.Engine {'name': 'stocks'}\n",
+      "2017-09-22 23:50:20,312 INFO sqlalchemy.engine.base.Engine select relname from pg_class c join pg_namespace n on n.oid=c.relnamespace where pg_catalog.pg_table_is_visible(c.oid) and relname=%(name)s\n",
+      "2017-09-22 23:50:20,315 INFO sqlalchemy.engine.base.Engine {'name': 'base_params'}\n",
+      "2017-09-22 23:50:20,319 INFO sqlalchemy.engine.base.Engine select relname from pg_class c join pg_namespace n on n.oid=c.relnamespace where pg_catalog.pg_table_is_visible(c.oid) and relname=%(name)s\n",
+      "2017-09-22 23:50:20,321 INFO sqlalchemy.engine.base.Engine {'name': 'bookmarket_params'}\n"
      ]
     }
    ],
@@ -7763,19 +7719,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "2017-09-21 10:52:13,296 INFO sqlalchemy.engine.base.Engine select relname from pg_class c join pg_namespace n on n.oid=c.relnamespace where pg_catalog.pg_table_is_visible(c.oid) and relname=%(name)s\n",
-      "2017-09-21 10:52:13,297 INFO sqlalchemy.engine.base.Engine {'name': 'stocks'}\n",
-      "2017-09-21 10:52:13,300 INFO sqlalchemy.engine.base.Engine BEGIN (implicit)\n",
-      "2017-09-21 10:52:13,322 INFO sqlalchemy.engine.base.Engine INSERT INTO stocks (stock_code, company, market_type) VALUES (%(stock_code)s, %(company)s, %(market_type)s)\n",
-      "2017-09-21 10:52:13,323 INFO sqlalchemy.engine.base.Engine ({'stock_code': '005930', 'company': '삼성전자', 'market_type': 1}, {'stock_code': '000660', 'company': 'SK하이닉스', 'market_type': 1}, {'stock_code': '005935', 'company': '삼성전자우', 'market_type': 1}, {'stock_code': '005380', 'company': '현대차', 'market_type': 1}, {'stock_code': '005490', 'company': 'POSCO', 'market_type': 1}, {'stock_code': '051910', 'company': 'LG화학', 'market_type': 1}, {'stock_code': '015760', 'company': '한국전력', 'market_type': 1}, {'stock_code': '035420', 'company': 'NAVER', 'market_type': 1}  ... displaying 10 of 2609 total bound parameter sets ...  {'stock_code': '207720', 'company': '엔에이치SL스팩', 'market_type': 2}, {'stock_code': '032685', 'company': '소프트센우', 'market_type': 2})\n",
-      "2017-09-21 10:52:13,898 INFO sqlalchemy.engine.base.Engine COMMIT\n"
+     "ename": "NameError",
+     "evalue": "name 'stocks' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-10-770f7c64c6d6>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m# send data to PostgreSQL\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mstocks\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mto_sql\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'stocks'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mengine\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mindex\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;32mFalse\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mif_exists\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m'append'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m: name 'stocks' is not defined"
      ]
     }
    ],
