--- a/BigBull/crawler4piotroski_fscore_selenium_v2.ipynb
+++ b/BigBull/crawler4piotroski_fscore_selenium_v2.ipynb
@@ -192,22 +192,22 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2017-10-10 17:32:18,591 INFO sqlalchemy.engine.base.Engine select version()\n",
-      "2017-10-10 17:32:18,592 INFO sqlalchemy.engine.base.Engine {}\n",
-      "2017-10-10 17:32:18,598 INFO sqlalchemy.engine.base.Engine select current_schema()\n",
-      "2017-10-10 17:32:18,599 INFO sqlalchemy.engine.base.Engine {}\n",
-      "2017-10-10 17:32:18,603 INFO sqlalchemy.engine.base.Engine SELECT CAST('test plain returns' AS VARCHAR(60)) AS anon_1\n",
-      "2017-10-10 17:32:18,604 INFO sqlalchemy.engine.base.Engine {}\n",
-      "2017-10-10 17:32:18,609 INFO sqlalchemy.engine.base.Engine SELECT CAST('test unicode returns' AS VARCHAR(60)) AS anon_1\n",
-      "2017-10-10 17:32:18,610 INFO sqlalchemy.engine.base.Engine {}\n",
-      "2017-10-10 17:32:18,611 INFO sqlalchemy.engine.base.Engine show standard_conforming_strings\n",
-      "2017-10-10 17:32:18,612 INFO sqlalchemy.engine.base.Engine {}\n",
-      "2017-10-10 17:32:18,615 INFO sqlalchemy.engine.base.Engine select relname from pg_class c join pg_namespace n on n.oid=c.relnamespace where pg_catalog.pg_table_is_visible(c.oid) and relname=%(name)s\n",
-      "2017-10-10 17:32:18,616 INFO sqlalchemy.engine.base.Engine {'name': 'stocks'}\n",
-      "2017-10-10 17:32:18,621 INFO sqlalchemy.engine.base.Engine select relname from pg_class c join pg_namespace n on n.oid=c.relnamespace where pg_catalog.pg_table_is_visible(c.oid) and relname=%(name)s\n",
-      "2017-10-10 17:32:18,622 INFO sqlalchemy.engine.base.Engine {'name': 'base_params'}\n",
-      "2017-10-10 17:32:18,623 INFO sqlalchemy.engine.base.Engine select relname from pg_class c join pg_namespace n on n.oid=c.relnamespace where pg_catalog.pg_table_is_visible(c.oid) and relname=%(name)s\n",
-      "2017-10-10 17:32:18,625 INFO sqlalchemy.engine.base.Engine {'name': 'bookmarket_params'}\n"
+      "2017-10-12 12:09:26,868 INFO sqlalchemy.engine.base.Engine select version()\n",
+      "2017-10-12 12:09:26,870 INFO sqlalchemy.engine.base.Engine {}\n",
+      "2017-10-12 12:09:26,876 INFO sqlalchemy.engine.base.Engine select current_schema()\n",
+      "2017-10-12 12:09:26,877 INFO sqlalchemy.engine.base.Engine {}\n",
+      "2017-10-12 12:09:26,882 INFO sqlalchemy.engine.base.Engine SELECT CAST('test plain returns' AS VARCHAR(60)) AS anon_1\n",
+      "2017-10-12 12:09:26,883 INFO sqlalchemy.engine.base.Engine {}\n",
+      "2017-10-12 12:09:26,890 INFO sqlalchemy.engine.base.Engine SELECT CAST('test unicode returns' AS VARCHAR(60)) AS anon_1\n",
+      "2017-10-12 12:09:26,891 INFO sqlalchemy.engine.base.Engine {}\n",
+      "2017-10-12 12:09:26,893 INFO sqlalchemy.engine.base.Engine show standard_conforming_strings\n",
+      "2017-10-12 12:09:26,893 INFO sqlalchemy.engine.base.Engine {}\n",
+      "2017-10-12 12:09:26,896 INFO sqlalchemy.engine.base.Engine select relname from pg_class c join pg_namespace n on n.oid=c.relnamespace where pg_catalog.pg_table_is_visible(c.oid) and relname=%(name)s\n",
+      "2017-10-12 12:09:26,897 INFO sqlalchemy.engine.base.Engine {'name': 'stocks'}\n",
+      "2017-10-12 12:09:26,903 INFO sqlalchemy.engine.base.Engine select relname from pg_class c join pg_namespace n on n.oid=c.relnamespace where pg_catalog.pg_table_is_visible(c.oid) and relname=%(name)s\n",
+      "2017-10-12 12:09:26,904 INFO sqlalchemy.engine.base.Engine {'name': 'base_params'}\n",
+      "2017-10-12 12:09:26,906 INFO sqlalchemy.engine.base.Engine select relname from pg_class c join pg_namespace n on n.oid=c.relnamespace where pg_catalog.pg_table_is_visible(c.oid) and relname=%(name)s\n",
+      "2017-10-12 12:09:26,907 INFO sqlalchemy.engine.base.Engine {'name': 'bookmarket_params'}\n"
      ]
     }
    ],
@@ -224,10 +224,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2017-10-10 17:32:19,652 INFO sqlalchemy.engine.base.Engine BEGIN (implicit)\n",
-      "2017-10-10 17:32:19,654 INFO sqlalchemy.engine.base.Engine SELECT stocks.stock_code AS stocks_stock_code, stocks.company AS stocks_company \n",
+      "2017-10-12 12:09:30,574 INFO sqlalchemy.engine.base.Engine BEGIN (implicit)\n",
+      "2017-10-12 12:09:30,576 INFO sqlalchemy.engine.base.Engine SELECT stocks.stock_code AS stocks_stock_code, stocks.company AS stocks_company \n",
       "FROM stocks\n",
-      "2017-10-10 17:32:19,656 INFO sqlalchemy.engine.base.Engine {}\n"
+      "2017-10-12 12:09:30,578 INFO sqlalchemy.engine.base.Engine {}\n"
      ]
     }
    ],
@@ -1257,6 +1257,33 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# One Big Loop through all company codes\n",
+    "# load the page! \n",
+    "# move to the relavent frame \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# crawled string --> float converter function\n",
+    "def float_converter(var): \n",
+    "    if var.string \n",
+    "    var = var.string"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 22,
    "metadata": {
     "collapsed": true
@@ -1264,14 +1291,7 @@
    "outputs": [],
    "source": [
     "# A function to crawl a balance sheet\n",
-    "def crawl_balsheet(code): \n",
-    "    # open a page \n",
-    "    driver.get('http://finance.naver.com/item/coinfo.nhn?code={0}'.format(code))\n",
-    "    \n",
-    "    # move to a relavent frame \n",
-    "    frame = driver.find_element_by_css_selector(\"#coinfo_cp\")\n",
-    "    driver.switch_to.frame(frame)\n",
-    "    \n",
+    "def crawl_balsheet(code):\n",
     "    # click a right tab \n",
     "    finstate_button = driver.find_element_by_css_selector('#header-menu > div.wrapper-menu > dl > dt:nth-of-type(3) > a')\n",
     "    finstate_button.click\n",
@@ -1279,12 +1299,21 @@
     "    # click Bal Sheet Tab \n",
     "    balsheet_button = driver.find_element_by_css_selector(\"#rpt_tab2\")\n",
     "    balsheet_button.click\n",
+    "    driver.implicitly_wait(1)\n",
     "    \n",
     "    # getting the page source and making the soup! \n",
     "    html_balsheet = driver.page_source\n",
     "    soup_balsheet = BeautifulSoup(html_balsheet, 'lxml')\n",
     "    \n",
-    "    print(soup_balsheet)\n",
+    "    # getting values from \"Balance Sheet\" \n",
+    "    total_asset = soup_balance.select('#table-content > table > tbody > tr:nth-of-type(1) > td.num')\n",
+    "    lt_debt = soup_balance.select('#table-content > table > tbody > tr:nth-of-type(152) > td.num')\n",
+    "    lt_borrowing = soup_balance.select('#table-content > table > tbody > tr:nth-of-type(158) > td.num')\n",
+    "    current_asset = soup_balance.select('#table-content > table > tbody > tr:nth-of-type(2) > td.num')\n",
+    "    current_liabilities = soup_balance.select('#table-content > table > tbody > tr:nth-of-type(110) > td.num')\n",
+    "    shareholder_equity = soup_balance.select('#table-content > table > tbody > tr:nth-of-type(188) > td.num')\n",
+    "    \n",
+    "    # convert string --> float \n",
     "    "
    ]
   },
