fscore dataframe updated

--- a/BigBull/crawler4piotrostki_universe.ipynb
+++ b/BigBull/crawler4piotrostki_universe.ipynb
@@ -374,7 +374,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -383,7 +383,7 @@
        "['000030', '우리은행']"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -7614,7 +7614,8 @@
     "    stock_code = Column(String, unique=True, nullable=False)\n",
     "    company = Column(String, index=True, unique=True, nullable=False)\n",
     "    market_type = Column(Integer)\n",
-    "    industry = Column(String)\n",
+    "    m_ics = Column(String)\n",
+    "    w_ics = Column(String)\n",
     "    created_on = Column(DateTime, default=datetime.utcnow)\n",
     "    updated_on = Column(DateTime, default=datetime.utcnow)\n",
     "    \n",
