f-score calc done!

--- a/BigBull/Untitled.ipynb
+++ b/BigBull/Untitled.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {
     "collapsed": true
    },
@@ -12,7 +12,8 @@
     "from sqlalchemy.ext.declarative import declarative_base\n",
     "from sqlalchemy.orm import sessionmaker\n",
     "\n",
-    "import pandas as pd"
+    "import pandas as pd\n",
+    "import numpy as np"
    ]
   },
   {
@@ -728,7 +729,9 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "d1 = {1:2, 3:4}\n",
@@ -755,6 +758,146 @@
    ],
    "source": [
     "d1 + d2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "ics = {'m_ics': '전기', 'w_ics': '전기'}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['전기', '전기', '전기', '전기', '전기']"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "['전기']*5"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = pd.DataFrame({'A' : ['one', 'one', 'two', 'three'] * 3,\n",
+    "                   'B' : ['A', 'B', 'C'] * 4,\n",
+    "                   'C' : ['foo', 'foo', 'foo', 'bar', 'bar', 'bar'] * 2,\n",
+    "                   'D' : np.random.randn(12),\n",
+    "                   'E' : np.random.randn(12)})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0       one\n",
+       "1       one\n",
+       "2       two\n",
+       "3     three\n",
+       "4       one\n",
+       "5       one\n",
+       "6       two\n",
+       "7     three\n",
+       "8       one\n",
+       "9       one\n",
+       "10      two\n",
+       "11    three\n",
+       "Name: A, dtype: object"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.A"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0       one\n",
+       "1       one\n",
+       "2       two\n",
+       "3     three\n",
+       "4       one\n",
+       "5       one\n",
+       "6       two\n",
+       "7     three\n",
+       "8       one\n",
+       "9       one\n",
+       "10      two\n",
+       "11    three\n",
+       "Name: A, dtype: object"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df['A']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0       NaN\n",
+       "1       one\n",
+       "2       one\n",
+       "3       two\n",
+       "4     three\n",
+       "5       one\n",
+       "6       one\n",
+       "7       two\n",
+       "8     three\n",
+       "9       one\n",
+       "10      one\n",
+       "11      two\n",
+       "Name: A, dtype: object"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df['A'].shift(1)"
    ]
   },
   {
